samples/_failures_safe/1761042109_18ee5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_495e299f.c: In function ‘main’:
./samples/SAFE/__tmp_495e299f.c:121:5: error: expected declaration or statement at end of input
  121 |     }
      |     ^
